Fix IE issues with collapse default sarcelle dot

--- a/source/css/scss/_nav.scss
+++ b/source/css/scss/_nav.scss
@@ -174,8 +174,10 @@
           }
           &.circle,
           &.default-icon {
-            @include circle($size: .625rem);
             left: 1.6875rem;
+            &:after {
+              @include circle($size: .625rem);
+            }
           }
         }
       }
